<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_home"
            android:title="@string/title_home" />
        <item android:title="文章">
            <menu android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_posts_all"
                    android:icon="@drawable/ic_menu"
                    android:title="@string/filter_all" />
                <item
                    android:id="@+id/nav_posts_news"
                    android:icon="@drawable/ic_menu"
                    android:title="@string/title_news" />
                <item
                    android:id="@+id/nav_posts_report"
                    android:icon="@drawable/ic_menu"
                    android:title="@string/title_report" />
                <item
                    android:id="@+id/nav_posts_discussion"
                    android:icon="@drawable/ic_menu"
                    android:title="@string/title_discussion" />
            </menu>
        </item>
        <item android:title="@string/title_youtube">
            <menu>
                <item
                    android:id="@+id/nav_youtube_latest"
                    android:icon="@drawable/ic_menu"
                    android:title="@string/youtube_filter_latest" />
                <item
                    android:id="@+id/nav_youtube_review"
                    android:icon="@drawable/ic_menu"
                    android:title="@string/youtube_filter_review" />
                <item
                    android:id="@+id/nav_youtube_broadcasts"
                    android:icon="@drawable/ic_menu"
                    android:title="@string/youtube_filter_broadcast" />
            </menu>
        </item>
        <item
            android:id="@+id/nav_library"
            android:title="@string/title_library"/>
        <item
            android:id="@+id/nav_events"
            android:title="@string/title_events" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/title_settings" />
    </group>
</menu>