<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:showIn="@layout/activity_main">

    <item android:id="@id/nav_home" android:icon="@drawable/logo_only"
        android:title="@string/title_home" />

    <item android:id="@+id/nav_youtube" android:icon="@drawable/ic_news"
        android:title="@string/title_youtube" />

<!--    <item android:id="@id/nav_library" android:icon="@drawable/ic_library"-->
<!--        android:title="@string/title_library" />-->

    <item android:id="@+id/placeholder"
        android:title=" "/>

    <item android:id="@id/nav_events" android:icon="@drawable/ic_event"
        android:title="@string/title_events" />

    <item android:id="@id/nav_settings" android:icon="@drawable/ic_person"
        android:title="@string/title_settings" />

</menu>